--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -26,13 +26,41 @@ body {
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(#fff,rgb(214, 219, 220));
+  background: linear-gradient(#fff, rgb(214, 219, 220));
 }
 
 a {
   color: inherit;
   text-decoration: none;
 }
-.layout{
+
+.layout {
   padding: 10rem;
+}
+
+.main-title {
+  padding: 0.5rem 0;
+  display: flex;
+  align-items: baseline;
+  border-bottom: 1px solid silver;
+}
+
+.main-title h1{
+  margin-right: 1rem;
+}
+
+.main-title button{
+  margin-left: 1rem;
+  background-color: transparent;
+  border: 0;
+  outline: none;
+  text-decoration: underline;
+  font-weight: 600;
+  color: teal;
+  cursor: pointer;
+}
+
+.link{
+  text-decoration: underline;
+  cursor: pointer;
 }
